--- a/app/assets/stylesheets/users_new.scss
+++ b/app/assets/stylesheets/users_new.scss
@@ -7,7 +7,7 @@
 
  h2 { //Styles Sign Up Now header
    font-size: 50px;
-   color: white;
+   color: #00264d;
    margin-top: 0px;
  }
 
